# phyloblitz

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  NOTES.md  README.md  pixi.toml  pyproject.toml
docs/: compare.md  dev.md  index.md  install.md  ref.md  run.md
src/phyloblitz/: __about__.py  __init__.py  compare.py  downloads.py  main.py  pipeline.py  report.py  run.py  utils.py
tests/: __init__.py  pipeline.py  report.py  run.py  utils.py
