[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phyloblitz"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
scripts = { phyloblitz = "phyloblitz:main.main" }
authors = [
  { name = "Brandon Seah", email = "brandon_seah@tll.org.sg" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pysam>=0.23.3",
]

[project.urls]
Documentation = "https://github.com/kbseah/phyloblitz#readme"
Issues = "https://github.com/kbseah/phyloblitz/issues"
Source = "https://github.com/kbseah/phyloblitz"

[tool.hatch.version]
path = "src/phyloblitz/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/phyloblitz tests}"

[tool.coverage.run]
source_pkgs = ["phyloblitz", "tests"]
branch = true
parallel = true
omit = [
  "src/phyloblitz/__about__.py",
]

[tool.coverage.paths]
phyloblitz = ["src/phyloblitz", "*/phyloblitz/src/phyloblitz"]
tests = ["tests", "*/phyloblitz/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
